# proctoring

./: .gitignore  Dockerfile  README.md  active.html  audio.py  copypaste.html  face-rec.py  head-pose (1).py  head-pose.py  index.html  opencv.html  opencvv.js  processes.py  pyaudio_test.py  requirements.txt  screen.html  screen.js  setup.cfg  webrtc-test.js  windowClose.html
app/: server.py
app/templates/: app.ts  index.html  styles.css
src/: audio.py  detection.py  head-pose.py  head_pose.py  run.py  toDo.txt  ui.py
src/brain/: detection.py
src/vision/: head_pose.py
unit_test/: graph.py
