[metadata]
name = example-package-sanket2000
version = 0.0.1
author = Sanket Suhagiya
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sanket2000/proctoring
project_urls =
    Bug Tracker = https://github.com/sanket2000/proctoring/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src